--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "keen",
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
     "jquery": "^2.1.3",
     "jsdom": "^3.1.2",
     "moment": "^2.9.0",
