--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^0.9.0",
     "jquery": "^2.1.3",
     "jsdom": "^3.1.2",
+    "lowdb": "^0.7.2",
     "moment": "^2.9.0",
     "request": "^2.53.0"
   }
