--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "parsing gihub trend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/jshint/bin/jshint exec.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "async": "^0.9.0",
     "jquery": "^2.1.3",
     "jsdom": "^3.1.2",
+    "jshint": "^2.6.3",
     "lowdb": "^0.7.2",
     "moment": "^2.9.0",
     "request": "^2.53.0"
