--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "parsing gihub trend",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint exec.js"
+    "test": "node exec.js"
   },
   "repository": {
     "type": "git",
