--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jshint": "^2.6.3",
     "lowdb": "^0.7.2",
     "moment": "^2.9.0",
+    "osmosis": "0.0.6",
     "request": "^2.53.0"
   }
 }
